Fix issue dual reporting PrintGCDetails missing/disabled.